Bug 37561 - Failed installing extension: Duden-Korrektor 5.0/6.0
Summary: Failed installing extension: Duden-Korrektor 5.0/6.0
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.4.0 RC1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: (target:3.5.0)
Keywords:
Depends on:
Blocks: mab3.4 mab3.5
  Show dependency treegraph
 
Reported: 2011-05-24 18:25 UTC by Lars Knickrehm
Modified: 2012-08-19 05:57 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lars Knickrehm 2011-05-24 18:25:57 UTC
At first: I know, this might be a problem of the extension I'd like to install, BUT:

I successfully installed the mentioned extension (Duden-Korrektor 5.0) on OpenOffice.org 3.2.x and LibreOffice 3.3.x without problems.

Installing Duden-Korrektor 5.0 on LibreOffice 3.4 RC1 I successfully accept the extension's license and finally it fails with the following error message:
"loading component library failed: file:///.../duden_korrektormi.dll"

So why did I create a new bug for this? I just can guess, that it might be a problem with an outdated library or maybe a regression. That's why I report this, so in case it's a real bug, it does not get lost somewhere else.
Comment 1 manj_k 2011-05-29 14:20:29 UTC
I can confirm this error message for 'duden_korrektormi.dll'
with LibO 3.4 RC1 and RC2 [on WinXP].
(Way: Extension Manager > Add... > Duden-Korrektor-OpenOffice.oxt)

Additionally this message in Extension Manager (after restart): 
"Error: The status of this extension is unknown".
The extension (Duden Korrektor 5.0) is disabled and cannot be enabled.

Extension Manager > Add... > Duden-Korrektor-OpenOffice.oxt
works fine with LibO 3.3.2, also with OOo 3.4 Beta (OOO340m0) and OOo-dev DEV300m106.
Comment 2 Don't use this account, use tml@iki.fi 2011-05-29 14:53:07 UTC
So where can one (legally) get a copy of this duden_korrektormi.dll to test with?
Comment 3 Lars Knickrehm 2011-05-29 15:42:09 UTC
I got the same error while testing the Demo of version 6.0. You can get it from http://www.duden.de/support/testversionen . Do you need more information to get that file?
Comment 4 Don't use this account, use tml@iki.fi 2011-06-23 02:56:06 UTC
Downloading the test version now.
Comment 5 Don't use this account, use tml@iki.fi 2011-06-23 03:12:02 UTC
My guess is that our old friend uwinapi.dll is the culprit here. The duden_korrektormi.dll imports GetShortPathNameW from uwinapi.dll, and in 3.4 uwinapi.dll does not export such a symbol. To the best of my knowledge, that change is not something LibreOffice developers would have done, but is from OOo merges. Will investigate.
Comment 6 Don't use this account, use tml@iki.fi 2011-06-23 06:04:15 UTC
As a workaround, if my guess is correct, just installing the old uwinapi.dll from a 3.3 installation of OOo should help.
Comment 7 Lars Knickrehm 2011-06-23 06:47:25 UTC
Thanks for the tip. I downloaded LibreOffice 3.3.3, extracted it and got uwinapi.dll from the cab archive of the installer. Now I simply replaced the file at "C:\Program Files\LibreOffice 3\URE\bin" and installing works.
Comment 8 manj_k 2011-06-23 07:01:08 UTC
Success!

Tested with LibO 3.4.0 release, and LibO 3.4.1 RC1
[WinXP 32b / Duden Korrektor 5 (Duden-Korrektor-OpenOffice.oxt)]

- Renamed 'uwinapi.dll' (28 KB) in both LibO versions
[path: ...\Program Files\<LibreOffice 3.4>\URE\bin]

- Replaced with 'uwinapi.dll' (84 KB) from OOo 3.3.0 release

Installation via Extension Manager w/o error message.
German spell check, grammar, and hyphenation work fine.
Comment 9 Tobias Heilig 2011-08-01 22:45:27 UTC
I can confirm both, the bug as well as the workaround.
Tested with LibreOffice 3.4.2 and Duden Korrektor 6.0
Comment 10 manj_k 2011-08-03 13:44:24 UTC
.
Comment 11 bugzilla2 2011-08-29 00:50:06 UTC
I wonder why this "easy" (I'm not a developer) fix didn't made it into 3.4.3 RC2. The uwinapi.dll from LibO 3.3 series also works fine, so why not simply use that file for 3.4.x Codeline? As said, I'm not a developer, so I can't know what possible side-effects this would have, but for me the old dll works just fine.

Is it possible to include the old dll or a fixed one into 3.4.3 RC3, or is it too late, and this can be done only in 3.4.4?
Comment 12 Patrik 2011-10-22 04:24:42 UTC
I can confirm this bug with Linux

Version Numbers:
Libreoffice: 3.4.3 OOO340m1 (Build:302)
Java: 1.6.0.29
Duden Korrektor: 8.0.2 (newest version at the time of writing)

Some comments:
- The installation does not work either with the Duden korrektor version 6
- the previously installed version of Duden Korrektor 6 worked (so it's an installation problem, not a runtime problem)- I just cannot reinstall it again after having tried to install the new version
- Duden Korrektor 8.0.2 installs just fine on OPENoffice 3.3.0, OOO330m20 (Build: 9567) 

..therefore going back to Openoffice until this bug is resolved
Comment 13 nero75 2011-11-17 05:07:19 UTC
Hello,

is the bug solved for LibreOffice 3.4.4.?
I'm still working with 3.3.
Comment 14 Tobias Heilig 2011-11-17 05:17:45 UTC
Sorry but I am out of office until 2011-11-18.
I will respond to your e-mail as soon as I am back again.
Your e-mail has not been forwarded.

Best regards,
    Tobias Heilig
    – Software Development –
--
Sensor-Technik Wiedemann GmbH
Am Baerenwald 6
87600 Kaufbeuren
GERMANY

Phone           +49 (0) 8341 9505-724
Fax             +49 (0) 8341 9505-55
E-Mail          tobias.heilig@sensor-technik.de
WWW             www.sensor-technik.de<http://www.sensor-technik.de>

Registered with: Amtsgericht Kempten, HRB Nr. 1863
Managing Directors: Katharina and Wolfgang Wiedemann
Comment 15 bugzilla2 2011-11-17 05:22:07 UTC
Unfortunately, the bug is not solved in 3.4.4. Tried to install Duden Korrektor 6 yesterday on a customers machine, and it still fails. Still had to replace "uwinapi.dll", to install the extension.
Comment 16 Björn Michaelsen 2011-12-23 12:02:11 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 17 manj_k 2011-12-23 12:57:39 UTC
Still reproducible with LibO 3.5.0 Beta2
[LOdev 3.5.0beta2 · Build ID: 8589e48-760cc4d-f39cf3d-1b2857e-60db978]
(on WinXP 32b · UI en-US)
Comment 18 Stephan Hennig 2012-01-13 07:59:25 UTC
Reproducible with
LOdev 3.5.0beta3 
Build-ID: e40af8c-10029e3-615e522-88673a2-727f724
on Windows 7 x64, UI de_DE

A note to the developers:
Duden Korrektor extension has a very high priority for German professional writers.  Seeing this bug throughout all LibO 3.4.x releases and then again in LibO 3.5 makes for a /very/ bad user experience.  I suggest making this bug a blocker for LibO 3.5.  Even more so, since the fix discussed here (exporting missing symbols) sounds relatively simple.

Thanks,
Stephan Hennig
Comment 19 nero75 2012-01-16 07:21:45 UTC
I totally agree with Stephan Hennig! For month it's nearly impossible to upgrade LibreOffice because this bug. Especially because the native dictionary of LibreOffice isn't that good.
Comment 20 Michael Meeks 2012-01-18 04:41:49 UTC
> My guess is that our old friend uwinapi.dll is the culprit here. The
> duden_korrektormi.dll imports GetShortPathNameW from uwinapi.dll, and in
> 3.4 uwinapi.dll does not export such a symbol.

Strange indeed; the git log -u of sal/ shows no such symbol being removed (that I could see) uwinapi.dll being built from sal/osl/w32 AFAICS.

I imagine this is related to dropping unicows support - seemingly
http://prdownloads.sourceforge.net/libunicows/libunicows-1.1.2-src.tar.gz
implements that symbol.

Which leads me to wonder - what does duden_krrektormi use from unicows, and why is it not linked directly to that ? and so on.

If it is only a symbol or two - perhaps we can add them manually to uwinapi.dll - but if it is a whole gamut of unicows functionality, perhaps we'll need to build, compile & link that BSD libunicows beasty ...

Thoughts ?
Comment 21 Michael Meeks 2012-01-18 04:42:20 UTC
Fridrich - do you have any cycles to look at this ?
Comment 22 Fridrich Strba 2012-01-18 05:48:24 UTC
OK, I just downloaded the free evaluation version and this is my finding:
1) This version does not link against uwinapi.dll anymore which is good
2) This version does link however with stlport_vc7145.dll
3) It is our bug that we don't package that dll and it will be fixed for 3.5.0 release
It meas
Comment 23 Fridrich Strba 2012-01-18 05:49:19 UTC
It means that we will be able to install Duden corrector 8.0, but not the 5.0/6.0 that are reported in this bug
Comment 24 Lars Knickrehm 2012-01-18 06:56:21 UTC
It seems Chip Online still hosts the demo release of Duden Korrektor 6.0 for OpenOffice.org at http://www.chip.de/downloads/Duden-Korrektor-fuer-OpenOffice_51262854.html .
Hope it helps?!
Comment 25 Fridrich Strba 2012-01-18 07:23:34 UTC
(In reply to comment #24)
> It seems Chip Online still hosts the demo release of Duden Korrektor 6.0 for
> OpenOffice.org at
> http://www.chip.de/downloads/Duden-Korrektor-fuer-OpenOffice_51262854.html .

Thanks for the information. But it does not help. To make work 6.0 with LO 3.4.x or 3.5.x is impossible now. Duden knew the problem and released a version that works with LO 3.4.x and LO 3.5.x.

We just fixed this bug in LO master and in the libreoffice-3-5 branch. It will appear in 3.5.0-rc2
Comment 26 Lars Knickrehm 2012-01-18 08:06:17 UTC
I'd like to get back to
> since the fix discussed here (exporting missing symbols) sounds relatively simple.
(comment #18)

Is it that problematic to solve this issue?
Comment 27 Michael Meeks 2012-01-18 08:14:17 UTC
> Is it that problematic to solve this issue?

We don't want to restore the big chunk of legacy cruft in uwinapi.dll that is/was not part of our public ABI, it was linked to in error by this component.

The workaround is easy enough if you want to use the old version, substitute the old uwinapi.dll. Moving forward the newer versions don't have this issue (thankfully).
Comment 28 Fridrich Strba 2012-01-18 08:15:51 UTC
(In reply to comment #26)
> Is it that problematic to solve this issue?

Yes, it is. Nevertheless, for older versions there is a workaround. Find in an older installation of LibreOffice (3.3.x) the uwinapi.dll. If you replace that uwinapi.dll that is shipped with LibreOffice 3.4.x or LibreOffice 3.5.x with that library, chances are your Duden spell-checker will work.

Note that you have to wait for 3.5.0-rc2 that has the stlport fix.
Comment 29 Fridrich Strba 2012-01-19 04:22:59 UTC
(In reply to comment #26)
> Is it that problematic to solve this issue?

I just pushed a workaround into the libreoffice-3-5 branch. This is the code: http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=d823fef9b9f7ad0d0dcd834a3f2c47c3f018f523

Please, check with LibreOffice-3.5.0rc2 whether it is fixes for the versions 5.0/6.0, but I was able to register the 6.0 from chips.de myself
Comment 30 Stephan Hennig 2012-01-21 07:18:00 UTC
Just adding that Duden Korrektor 8 works on LibO 3.4.4 with the original uwinapi.dll.
Comment 31 Stephan Hennig 2012-01-26 11:36:58 UTC
Fix confirmed.
Duden Korrektor 5.0 and 6.0 both install and work with LibO 3.5 RC2 on Windows XP.

Thanks,
Stephan Hennig
Comment 32 manj_k 2012-01-26 13:39:49 UTC
Thanks to all.

[Duden Korrektor 5.0 on WinXP 32b]

Bugfix verified with

libreoffice-3-5~2012-01-23_22.09.27
LOdev 3.5.0rc1+ 
Build ID: 4d60e1a-b4ea45f-2d9b003

and

LibreOffice 3.5.0rc2 
Build ID: e371a95-bf68a13-5a1aa2b-d3c1ae9-b938258

Marked as VERIFIED.
Comment 33 sommerluk 2012-02-23 02:32:38 UTC
Thanks a lot!