Make older Duden Korrektor work with LO (fdo#37561)

signed-off-by: Michael Meeks <mmeeks@suse.com>

Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>